Add Server Guide
Update the available guides in each section. Add a servers section, this
section is all about how to create servers for mapdevving and
scrimmages.

--- a/en/guides/main.html
+++ b/en/guides/main.html
@@ -51,6 +51,9 @@
               <li>
                 <a href="/en/guides/obs">OBS Guide</a>
               </li>
+              <li>
+              	<a href="/en/guides/servers">Servers Guide</a>
+			  </li>
             </ul>
           </div>
           <div class="col-md-9">
