--- a/en/guides/mumble.html
+++ b/en/guides/mumble.html
@@ -51,6 +51,9 @@
               <li>
                 <a href="/en/guides/obs">OBS Guide</a>
               </li>
+              <li>
+              	<a href="/en/guides/servers">Servers Guide</a>
+			  </li>
             </ul>
           </div>
           <div class="col-md-9">
